# code-sentry

./: .gitignore  .pre-commit-config.yaml  .reviewerignore  PROJECT_REQUIREMENTS.md  README.md  TODO.md  errors.txt  pyproject.toml
.agents/skills/chromadb-integration/: SKILL.md
.agents/skills/coding-best-practices/: SKILL.md
.agents/skills/git-sandbox-operations/: SKILL.md
.agents/skills/llm-prompt-engineering/: SKILL.md
.agents/skills/python-project-setup/: SKILL.md
.agents/skills/tree-sitter-parsing/: SKILL.md
.github/workflows/: ci.yml
src/agent/: history.py  orchestrator.py  output_parser.py  prompt_assembler.py  schemas.py
src/agent/tools/: ast_query.py  factory.py  file_read.py  file_write.py  git_op.py  registry.py  shell_exec.py  terminal_tools.py  vector_search.py
src/cli/: config.py  index.py  main.py
src/config/: default_config.toml  settings.py
src/config/prompts/: bug_fix.txt  explain.txt  health_scan.txt  refactor.txt  review_pr.txt  system_common.txt
src/config/prompts/examples/: format_correction.json  review_pr_example.json
src/git_ops/: client.py  sandbox.py
src/indexing/: chunker.py  embedder.py  parser.py  pipeline.py  vectordb.py
src/llm/: client.py
src/retrieval/: prompt_builder.py  search.py
src/utils/: constants.py  errors.py  logging.py
tests/unit/: test_chunker.py  test_config_settings.py  test_embedder.py  test_git_ops.py  test_llm_client.py  test_logging.py  test_orchestrator.py  test_pipeline.py  test_prompt_assembler.py  test_prompt_builder.py  test_search.py  test_tools.py  test_vectordb.py
