[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[project]
name = "code-reviewer"
version = "0.1.0"
description = "AI-powered code reviewer and auto-refactor system"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [{ name = "Your Name" }]
keywords = ["ai", "code-review", "llm", "refactoring", "static-analysis"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Quality Assurance",
]

dependencies = [
    # Config parsing (tomllib is built-in only from 3.11+)
    "tomli>=2.0.0; python_version < '3.11'",

    # CLI
    "typer>=0.9.0",
    "rich>=13.0.0",

    # API Server
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",

    # LLM Clients
    "openai>=1.12.0",
    "anthropic>=0.18.0",
    "litellm>=1.30.0",
    "tiktoken>=0.6.0",

    # Embeddings & Vector DB
    "chromadb>=0.4.22",

    # AST Parsing
    "tree-sitter>=0.22.0",
    "tree-sitter-python>=0.21.0",

    # Git Operations
    "gitpython>=3.1.42",

    # Database
    "sqlalchemy[asyncio]>=2.0.25",
    "alembic>=1.13.0",
    "aiosqlite>=0.20.0",

    # Code Analysis
    "radon>=6.0.0",
    "unidiff>=0.7.5",

    # Configuration
    "pydantic>=2.6.0",
    "pydantic-settings>=2.1.0",

    # Task Queue
    "celery[redis]>=5.3.0",

    # HTTP Client
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "ruff>=0.3.0",
    "mypy>=1.8.0",
    "pre-commit>=3.6.0",
    "vcrpy>=6.0.0",
]

postgres = [
    "asyncpg>=0.29.0",
    "psycopg2-binary>=2.9.0",
]

[project.scripts]
code-reviewer = "src.cli.main:app"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "RUF",  # ruff-specific rules
]

[tool.ruff.lint.isort]
known-first-party = ["src"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
markers = [
    "integration: marks tests that require external services",
    "slow: marks tests that take a long time to run",
]

[tool.coverage.run]
source = ["src"]
omit = ["tests/*", "src/cli/*"]

[tool.coverage.report]
show_missing = true
fail_under = 80
